--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -234,7 +234,7 @@ libh5test_la_LIBADD = $(LIBHDF5)
 libh5test_la_LDFLAGS = -static
 
 # Use libhd5test.la to compile all of the tests
-LDADD = ${LIBHDF5} libh5test.la
+LDADD = libh5test.la $(LIBHDF5)
 
 # List the source files for tests that have more than one
 ttsafe_SOURCES = ttsafe.c ttsafe_dcreate.c ttsafe_error.c ttsafe_cancel.c       \
@@ -304,197 +304,197 @@ check_PROGRAMS = testhdf5$(EXEEXT) lheap$(EXEEXT) ohdr$(EXEEXT) \
 big_SOURCES = big.c
 big_OBJECTS = big.$(OBJEXT)
 big_LDADD = $(LDADD)
-big_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+big_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 big_LDFLAGS =
 bittests_SOURCES = bittests.c
 bittests_OBJECTS = bittests.$(OBJEXT)
 bittests_LDADD = $(LDADD)
-bittests_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+bittests_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 bittests_LDFLAGS =
 btree2_SOURCES = btree2.c
 btree2_OBJECTS = btree2.$(OBJEXT)
 btree2_LDADD = $(LDADD)
-btree2_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+btree2_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 btree2_LDFLAGS =
 cache_SOURCES = cache.c
 cache_OBJECTS = cache.$(OBJEXT)
 cache_LDADD = $(LDADD)
-cache_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+cache_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 cache_LDFLAGS =
 cmpd_dset_SOURCES = cmpd_dset.c
 cmpd_dset_OBJECTS = cmpd_dset.$(OBJEXT)
 cmpd_dset_LDADD = $(LDADD)
-cmpd_dset_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+cmpd_dset_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 cmpd_dset_LDFLAGS =
 dangle_SOURCES = dangle.c
 dangle_OBJECTS = dangle.$(OBJEXT)
 dangle_LDADD = $(LDADD)
-dangle_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+dangle_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 dangle_LDFLAGS =
 dsets_SOURCES = dsets.c
 dsets_OBJECTS = dsets.$(OBJEXT)
 dsets_LDADD = $(LDADD)
-dsets_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+dsets_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 dsets_LDFLAGS =
 dtransform_SOURCES = dtransform.c
 dtransform_OBJECTS = dtransform.$(OBJEXT)
 dtransform_LDADD = $(LDADD)
-dtransform_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+dtransform_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 dtransform_LDFLAGS =
 dtypes_SOURCES = dtypes.c
 dtypes_OBJECTS = dtypes.$(OBJEXT)
 dtypes_LDADD = $(LDADD)
-dtypes_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+dtypes_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 dtypes_LDFLAGS =
 enum_SOURCES = enum.c
 enum_OBJECTS = enum.$(OBJEXT)
 enum_LDADD = $(LDADD)
-enum_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+enum_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 enum_LDFLAGS =
 err_compat_SOURCES = err_compat.c
 err_compat_OBJECTS = err_compat.$(OBJEXT)
 err_compat_LDADD = $(LDADD)
-err_compat_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+err_compat_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 err_compat_LDFLAGS =
 error_test_SOURCES = error_test.c
 error_test_OBJECTS = error_test.$(OBJEXT)
 error_test_LDADD = $(LDADD)
-error_test_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+error_test_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 error_test_LDFLAGS =
 extend_SOURCES = extend.c
 extend_OBJECTS = extend.$(OBJEXT)
 extend_LDADD = $(LDADD)
-extend_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+extend_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 extend_LDFLAGS =
 external_SOURCES = external.c
 external_OBJECTS = external.$(OBJEXT)
 external_LDADD = $(LDADD)
-external_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+external_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 external_LDFLAGS =
 file_handle_SOURCES = file_handle.c
 file_handle_OBJECTS = file_handle.$(OBJEXT)
 file_handle_LDADD = $(LDADD)
-file_handle_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+file_handle_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 file_handle_LDFLAGS =
 filename_SOURCES = filename.c
 filename_OBJECTS = filename.$(OBJEXT)
 filename_LDADD = $(LDADD)
-filename_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+filename_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 filename_LDFLAGS =
 fillval_SOURCES = fillval.c
 fillval_OBJECTS = fillval.$(OBJEXT)
 fillval_LDADD = $(LDADD)
-fillval_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+fillval_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 fillval_LDFLAGS =
 flush1_SOURCES = flush1.c
 flush1_OBJECTS = flush1.$(OBJEXT)
 flush1_LDADD = $(LDADD)
-flush1_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+flush1_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 flush1_LDFLAGS =
 flush2_SOURCES = flush2.c
 flush2_OBJECTS = flush2.$(OBJEXT)
 flush2_LDADD = $(LDADD)
-flush2_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+flush2_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 flush2_LDFLAGS =
 gass_append_SOURCES = gass_append.c
 gass_append_OBJECTS = gass_append.$(OBJEXT)
 gass_append_LDADD = $(LDADD)
-gass_append_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+gass_append_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 gass_append_LDFLAGS =
 gass_read_SOURCES = gass_read.c
 gass_read_OBJECTS = gass_read.$(OBJEXT)
 gass_read_LDADD = $(LDADD)
-gass_read_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+gass_read_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 gass_read_LDFLAGS =
 gass_write_SOURCES = gass_write.c
 gass_write_OBJECTS = gass_write.$(OBJEXT)
 gass_write_LDADD = $(LDADD)
-gass_write_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+gass_write_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 gass_write_LDFLAGS =
 getname_SOURCES = getname.c
 getname_OBJECTS = getname.$(OBJEXT)
 getname_LDADD = $(LDADD)
-getname_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+getname_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 getname_LDFLAGS =
 gheap_SOURCES = gheap.c
 gheap_OBJECTS = gheap.$(OBJEXT)
 gheap_LDADD = $(LDADD)
-gheap_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+gheap_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 gheap_LDFLAGS =
 hyperslab_SOURCES = hyperslab.c
 hyperslab_OBJECTS = hyperslab.$(OBJEXT)
 hyperslab_LDADD = $(LDADD)
-hyperslab_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+hyperslab_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 hyperslab_LDFLAGS =
 istore_SOURCES = istore.c
 istore_OBJECTS = istore.$(OBJEXT)
 istore_LDADD = $(LDADD)
-istore_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+istore_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 istore_LDFLAGS =
 lheap_SOURCES = lheap.c
 lheap_OBJECTS = lheap.$(OBJEXT)
 lheap_LDADD = $(LDADD)
-lheap_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+lheap_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 lheap_LDFLAGS =
 links_SOURCES = links.c
 links_OBJECTS = links.$(OBJEXT)
 links_LDADD = $(LDADD)
-links_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+links_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 links_LDFLAGS =
 mount_SOURCES = mount.c
 mount_OBJECTS = mount.$(OBJEXT)
 mount_LDADD = $(LDADD)
-mount_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+mount_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 mount_LDFLAGS =
 mtime_SOURCES = mtime.c
 mtime_OBJECTS = mtime.$(OBJEXT)
 mtime_LDADD = $(LDADD)
-mtime_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+mtime_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 mtime_LDFLAGS =
 ntypes_SOURCES = ntypes.c
 ntypes_OBJECTS = ntypes.$(OBJEXT)
 ntypes_LDADD = $(LDADD)
-ntypes_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+ntypes_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 ntypes_LDFLAGS =
 ohdr_SOURCES = ohdr.c
 ohdr_OBJECTS = ohdr.$(OBJEXT)
 ohdr_LDADD = $(LDADD)
-ohdr_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+ohdr_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 ohdr_LDFLAGS =
 reserved_SOURCES = reserved.c
 reserved_OBJECTS = reserved.$(OBJEXT)
 reserved_LDADD = $(LDADD)
-reserved_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+reserved_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 reserved_LDFLAGS =
 set_extent_SOURCES = set_extent.c
 set_extent_OBJECTS = set_extent.$(OBJEXT)
 set_extent_LDADD = $(LDADD)
-set_extent_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+set_extent_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 set_extent_LDFLAGS =
 srb_append_SOURCES = srb_append.c
 srb_append_OBJECTS = srb_append.$(OBJEXT)
 srb_append_LDADD = $(LDADD)
-srb_append_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+srb_append_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 srb_append_LDFLAGS =
 srb_read_SOURCES = srb_read.c
 srb_read_OBJECTS = srb_read.$(OBJEXT)
 srb_read_LDADD = $(LDADD)
-srb_read_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+srb_read_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 srb_read_LDFLAGS =
 srb_write_SOURCES = srb_write.c
 srb_write_OBJECTS = srb_write.$(OBJEXT)
 srb_write_LDADD = $(LDADD)
-srb_write_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+srb_write_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 srb_write_LDFLAGS =
 stab_SOURCES = stab.c
 stab_OBJECTS = stab.$(OBJEXT)
 stab_LDADD = $(LDADD)
-stab_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+stab_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 stab_LDFLAGS =
 stream_test_SOURCES = stream_test.c
 stream_test_OBJECTS = stream_test.$(OBJEXT)
 stream_test_LDADD = $(LDADD)
-stream_test_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+stream_test_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 stream_test_LDFLAGS =
 am_testhdf5_OBJECTS = testhdf5.$(OBJEXT) tarray.$(OBJEXT) \
 	tattr.$(OBJEXT) tconfig.$(OBJEXT) tfile.$(OBJEXT) \
@@ -505,24 +505,24 @@ am_testhdf5_OBJECTS = testhdf5.$(OBJEXT) tarray.$(OBJEXT) \
 	tvltypes.$(OBJEXT) tvlstr.$(OBJEXT)
 testhdf5_OBJECTS = $(am_testhdf5_OBJECTS)
 testhdf5_LDADD = $(LDADD)
-testhdf5_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+testhdf5_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 testhdf5_LDFLAGS =
 testmeta_SOURCES = testmeta.c
 testmeta_OBJECTS = testmeta.$(OBJEXT)
 testmeta_LDADD = $(LDADD)
-testmeta_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+testmeta_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 testmeta_LDFLAGS =
 am_ttsafe_OBJECTS = ttsafe.$(OBJEXT) ttsafe_dcreate.$(OBJEXT) \
 	ttsafe_error.$(OBJEXT) ttsafe_cancel.$(OBJEXT) \
 	ttsafe_acreate.$(OBJEXT)
 ttsafe_OBJECTS = $(am_ttsafe_OBJECTS)
 ttsafe_LDADD = $(LDADD)
-ttsafe_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+ttsafe_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 ttsafe_LDFLAGS =
 unlink_SOURCES = unlink.c
 unlink_OBJECTS = unlink.$(OBJEXT)
 unlink_LDADD = $(LDADD)
-unlink_DEPENDENCIES = $(top_builddir)/src/libhdf5.la libh5test.la
+unlink_DEPENDENCIES = libh5test.la $(top_builddir)/src/libhdf5.la
 unlink_LDFLAGS =
 
 DEFS = @DEFS@
@@ -593,7 +593,7 @@ all: all-am
 .SUFFIXES: .c .lo .o .obj
 $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ Makefile.am $(top_srcdir)/config/commence.am $(top_srcdir)/config/conclude.am $(top_srcdir)/configure.in $(ACLOCAL_M4)
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu  test/Makefile
+	  $(AUTOMAKE) --foreign  test/Makefile
 Makefile: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@ $(am__depfiles_maybe)
 
